binary op, constant value nodes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,8 +5,11 @@ set(SHADER_NODES_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/ShaderGraph.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/GraphVisitor.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/NodePin.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Nodes.cpp"
 
-    "${CMAKE_CURRENT_SOURCE_DIR}/generators/SPIRVGenerator.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/generators/GLSLGenerator.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/generators/GLSLFunctionGenerator.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/generators/FunctionImplDatabase.cpp"
 
     PARENT_SCOPE
 )
