--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,10 @@
 [submodule "external/mustache"]
 	path = external/mustache
 	url = https://github.com/kainjow/Mustache
+[submodule "external/imgui"]
+	path = external/imgui
+	url = https://github.com/ocornut/imgui/
+	branch = docking
+[submodule "external/glfw"]
+	path = external/glfw
+	url = https://github.com/glfw/glfw
