moved to fedora

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,19 +1,23 @@
-# add_subdirectory(glfw)
-# 
-# set(SHADER_NODES_SOURCES
-#     ${SHADER_NODES_SOURCES}
-#     "${CMAKE_CURRENT_SOURCE_DIR}/glad310/src/glad.c"
-#     PARENT_SCOPE
-# )
-# 
-# set(SHADER_NODES_INCLUDE_DIRS
-#     ${SHADER_NODES_INCLUDE_DIRS}
-#     "${CMAKE_CURRENT_SOURCE_DIR}/glad310/include"
-#     PARENT_SCOPE
-# )
-# 
-# set(SHADER_NODES_LINK_LIBRARIES
-#     ${SHADER_NODES_LINK_LIBRARIES}
-#     glfw dl
-#     PARENT_SCOPE
-# )
+add_subdirectory(glfw)
+
+set(GLAD_GL_VERSION
+    430
+)
+
+set(SHADER_NODES_SOURCES
+    ${SHADER_NODES_SOURCES}
+    "${CMAKE_CURRENT_SOURCE_DIR}/glad${GLAD_GL_VERSION}/src/glad.c"
+    PARENT_SCOPE
+)
+
+set(SHADER_NODES_INCLUDE_DIRS
+    ${SHADER_NODES_INCLUDE_DIRS}
+    "${CMAKE_CURRENT_SOURCE_DIR}/glad${GLAD_GL_VERSION}/include"
+    PARENT_SCOPE
+)
+
+set(SHADER_NODES_LINK_LIBRARIES
+    ${SHADER_NODES_LINK_LIBRARIES}
+    glfw dl
+    PARENT_SCOPE
+)
