--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SHADER_NODES_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/GraphVisitor.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/NodePin.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Nodes.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/NodePresets.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/GraphVerification.cpp"
 
     "${CMAKE_CURRENT_SOURCE_DIR}/generators/GLSLGenerator.cpp"
