--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,5 +13,11 @@ set(SHADER_NODES_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/generators/GLSLFunctionGenerator.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/generators/FunctionImplDatabase.cpp"
 
+    "${CMAKE_CURRENT_SOURCE_DIR}/gui/Editor.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gui/ImGuiStyle.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gui/NodeList.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gui/MenuBar.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gui/NodeCanvas.cpp"
+
     PARENT_SCOPE
 )
