--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "external/ImNodes"]
 	path = external/ImNodes
 	url = https://github.com/thedmd/imgui-node-editor
+[submodule "external/stb"]
+	path = external/stb
+	url = https://github.com/nothings/stb
